# things3-applescript-mcp

./: CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: claude_code.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
e2e_tests/: __init__.py  conftest.py  test_things3_api_e2e.py  test_todos.py
scripts/: show_today.py
src/: __init__.py  __main__.py  applescript_orchestrator.py  applescript_orchestrator_legacy.py  mcp_server.py  models.py  things3_api.py
src/applescript/: __init__.py  builders.py  converters.py  core.py  errors.py  parsers.py  py.typed
src/tests/: test_applescript_core.py  test_applescript_orchestrator.py  test_applescript_parsers.py  test_special_characters.py  test_things3_api.py
src/tests/fixtures/: list_areas_raw.txt  list_projects_raw.txt  single_area_raw.txt
src/things3/: __init__.py  applescript_orchestrator.py  command_builders.py  mcp_server.py  models.py  orchestrator.py  parsers.py  things3_api.py
tests/: __init__.py  test_applescript_orchestrator.py  test_things3_api.py
tests/fixtures/: list_todos_raw.txt  single_project_raw.txt  single_todo_raw.txt
