[project]
name = "things3-applescript-mcp"
version = "0.1.0"
description = "MCP server for bidirectional Things 3 integration using AppleScript"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
