[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "things3-applescript-mcp"
version = "0.1.0"
description = "MCP server for bidirectional Things 3 integration using AppleScript"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
things3-mcp-server = "things3.mcp_server:main"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "types-python-dateutil>=2.9.0.20241003",
]

[tool.hatch.build.targets.wheel]
packages = ["src/applescript", "src/things3"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
strict = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
